Bug 483283 - KMail unexpectedly trying to connect to safebrowsing.googleapis.com
Summary: KMail unexpectedly trying to connect to safebrowsing.googleapis.com
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.0.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-11 19:48 UTC by beanbo
Modified: 2024-03-12 07:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02.1
Sentry Crash Report:


Attachments
Settings (114.85 KB, image/png)
2024-03-11 19:48 UTC, beanbo
Details
Opensnitch warning (51.13 KB, image/png)
2024-03-11 19:48 UTC, beanbo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description beanbo 2024-03-11 19:48:16 UTC
Created attachment 166978 [details]
Settings

SUMMARY
KMail is trying to connect to safebrowsing.googleapis.com despite the related setting is switched off.

STEPS TO REPRODUCE

1. Go to KMail settings -> Security. Make sure "Check URL With Phishing Google System" is disabled.
2. Close KMail.
3. Setup firewall such as Opensnitch, make sure you don't have allow all rules for KMail app.
4. Open KMail and select any message for preview.

OBSERVED RESULT
Opensnitch reports that KMail is trying to connect to safebrowsing.googleapis.com

EXPECTED RESULT
Nothing should happen

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION
I use Wayland session
Comment 1 beanbo 2024-03-11 19:48:40 UTC
Created attachment 166980 [details]
Opensnitch warning
Comment 2 Laurent Montel 2024-03-12 05:58:27 UTC
ok I will look at it.
Regards
Comment 3 Laurent Montel 2024-03-12 07:04:25 UTC
Git commit d714d3e397dccc21f92930cd566fe5b1ddf7e430 by Laurent Montel.
Committed on 12/03/2024 at 07:04.
Pushed by mlaurent into branch 'release/24.02'.

Fix bug 483283:  KMail unexpectedly trying to connect to safebrowsing.googleapis.com
FIXED-IN: 24.02.1

M  +3    -1    messageviewer/src/viewer/viewer_p.cpp

https://invent.kde.org/pim/messagelib/-/commit/d714d3e397dccc21f92930cd566fe5b1ddf7e430