Fix bug 483283:  KMail unexpectedly trying to connect to safebrowsing.googleapis.com

BUG: 483283
FIXED-IN: 24.02.1